syntax = "proto3";

package agent;

option go_package = "techulus/cloud-agent/internal/proto";

service AgentService {
  rpc Connect(stream AgentMessage) returns (stream ControlPlaneMessage);
}

message AgentMessage {
  string server_id = 1;
  string timestamp = 2;
  string signature = 3;
  uint64 sequence = 4;

  oneof payload {
    StatusUpdate status_update = 10;
    WorkComplete work_complete = 11;
    Heartbeat heartbeat = 12;
    LogEntry log_entry = 13;
    ConfigAck config_ack = 14;
  }
}

message ControlPlaneMessage {
  uint64 sequence = 1;

  oneof payload {
    WorkItem work = 10;
    Acknowledgement ack = 11;
    Error error = 12;
    ConnectionAccepted connected = 13;
    CaddyConfig caddy_config = 14;
    DnsConfig dns_config = 15;
  }
}

message CaddyConfig {
  repeated CaddyRoute routes = 1;
}

message CaddyRoute {
  string id = 1;
  string domain = 2;
  repeated string upstreams = 3;
  bool internal = 4;
}

message StatusUpdate {
  Resources resources = 1;
  string public_ip = 2;
  repeated ContainerHealth container_health = 3;
}

message ContainerHealth {
  string container_id = 1;
  string health_status = 2;
  string deployment_id = 3;
}

message Resources {
  int32 cpu_cores = 1;
  int32 memory_total_mb = 2;
  int32 disk_total_gb = 3;
}

message WorkItem {
  string id = 1;
  string type = 2;
  bytes payload = 3;
}

message WorkComplete {
  string work_id = 1;
  string status = 2;
  string logs = 3;
}

message Heartbeat {
  int64 timestamp = 1;
}

message Acknowledgement {
  string message_id = 1;
  bool success = 2;
}

message ConfigAck {
  string config_type = 1;
  bool success = 2;
  string error = 3;
}

message Error {
  int32 code = 1;
  string message = 2;
  bool fatal = 3;
}

message ConnectionAccepted {
  string session_id = 1;
}

message DnsConfig {
  repeated DnsRecord records = 1;
}

message DnsRecord {
  string name = 1;
  repeated string ips = 2;
}

enum LogStreamType {
  LOG_STREAM_TYPE_UNKNOWN = 0;
  LOG_STREAM_TYPE_STDOUT = 1;
  LOG_STREAM_TYPE_STDERR = 2;
  LOG_STREAM_TYPE_HEARTBEAT = 3;
}

message LogEntry {
  string stream_id = 1;
  LogStreamType stream_type = 2;
  int64 timestamp = 3;
  bytes message = 4;
  string container_id = 5;
  string deployment_id = 6;
}
